# toy-py-repo

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/toy_py_repo/: __init__.py  __main__.py  cli.py
tests/: conftest.py  utils_test.py
