[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
]
workflow = [
    "pre-commit>=3.2.2",
    "pdm>=2.5.2",
]

[project]
name = "toy-py-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "martingale", email = "harunozkan@gmail.com"},
]
dependencies = [
    "typer>=0.7.0",
    "pyyaml>=6.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
